--- a/NuGet.Config
+++ b/NuGet.Config
@@ -3,7 +3,7 @@
   <packageSources>
     <!--To inherit the global NuGet package sources remove the <clear/> line below -->
     <clear />
-    <add key="volatile" value="https://www.myget.org/F/aspnetvolatiledev/api/v3/index.json" />
+    <add key="ci dev" value="https://www.myget.org/F/aspnetcidev/api/v3/index.json" />
     <add key="api.nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
 </configuration>
